<resources>
    <string name="app_name">DTS</string>
    <string name="lbl_isian">Masukkan Nama Anda :</string>
    <string name="hint_edit_nama">Silahkan Masukkan Nama Anda</string>
    <string name="text_btn_simpan">Simpan</string>
    <string name="lbl_alamat">Masukkan Alamat Anda :</string>
    <string name="hint_alamat">Isikan Alamat anda</string>\
    <string name="text_btn_reset">Reset</string>
</resources>